data/derived/sp14/progs/unify/prog2204.ml.out
Characters 158-207:
  | Average (ex1,ex2) -> "(("^exprToString ex1^"+"^exprToString ex2^")/2)"
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
